@@ -1,7 +1,5 @@
 <?php
 
-require("Smarty.class.php");
-
 $smarty = new Smarty;
 
 $smarty->compile_check = true;
